--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -16,5 +16,9 @@ layout: default
   {% endif %}
   <article>
     {{ content }}
+
+    <h2>Discussions</h2>
+
+    <p>If you have any thoughts about this, check out the <a href="https://github.com/orgs/clueboard/discussions" target="_blank">GitHib Discussions</a> I setup. I’d be thrilled to hear from you.</p>
   </article>
 </div>
