--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,6 +1,6 @@
 <header class="site-header">
   <h3 class="site-title">
-    <a href="{{ site.github.url }}/"><img src="/assets/img/clueboard.png"></a>
+    <a href="/"><img src="/assets/img/clueboard.png"></a>
   </h3>
   <nav class="menu-list">
     {% for item in site.data.settings.menu %}
