tweak the discussion text

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -19,7 +19,7 @@ layout: default
 
     <h2>Discussions</h2>
 
-    <p>If you have any thoughts about this, check out the <a href="https://github.com/orgs/clueboard/discussions" target="_blank">GitHib Discussions</a> I setup. I’d be thrilled to hear from you.</p>
+    <p>If you have any thoughts about a topic I've written about, check out the <a href="https://github.com/orgs/clueboard/discussions" target="_blank">GitHib Discussions</a>. I’d be thrilled to hear from you.</p>
   </article>
 
   <hr>
