--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -5,7 +5,7 @@ title: Home
 
 <h1 style="text-align: center">Welcome!</h1>
 
-<p style="text-align: center">Are you new here? Consider starting from the <a href="{{ site.baseurl }}building-a-homelab">first post</a> and reading forward!</p>
+<p style="text-align: center">Are you new here? Consider starting from the <a href="{{ site.baseurl }}building-a-homelab">first post</a> and reading forward! You'll also find links to some software and projects I've created above.</p>
 
 <h1 style="text-align: center">Posts</h1>
 
